activities info updated

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -14,7 +14,7 @@ firstweek:
     image: activities/fifa.jpg
     org: <a target="_blank" href="http://cesium.di.uminho.pt">CeSIUM</a>
     typeform: http://cesium.di.uminho.pt/activities/17
-    text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet commodo libero. Praesent consectetur, sem id egestas ullamcorper, turpis ligula maximus lorem, non congue quam mi ut enim. Vivamus eget dictum sem, vitae malesuada erat. Duis et placerat diam, bibendum dapibus tellus. Duis quis laoreet felis. Cras lobortis interdum eros, luctus laoreet ex faucibus id. In et lacus egestas, accumsan metus ac, sollicitudin ante. Aenean eleifend orci vel mollis sagittis. Vestibulum sed aliquam diam, at tincidunt nisl. Phasellus porttitor malesuada hendrerit. Curabitur nibh dolor, iaculis aliquet sagittis eget, vestibulum ac dui. Aenean arcu sapien, ultricies sit amet ipsum ut, accumsan consectetur risus. Duis felis diam, laoreet quis ipsum et, efficitur facilisis sapien.
+    text: Como a vida não pode ser só trabalho e é igualmente importante o lazer e o convívio, trazemos-te um torneio de FIFA  17, e como fantásticos prémios poderás ganhar uma camisola do CeSIUM e uma garrafa de jeropiga ou vinho do Porto!! Lidera a tua equipa nesta divertida competição!
 
   - title: Mass Training em suporte básico de vida
     date: 5 de Dezembro
@@ -39,17 +39,17 @@ firstweek:
     image: activities/vue.png
     org: <a target="_blank" href="http://cesium.di.uminho.pt">CeSIUM</a>
     typeform: http://www.cesium.di.uminho.pt/activities/11
-    text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet commodo libero. Praesent consectetur, sem id egestas ullamcorper, turpis ligula maximus lorem, non congue quam mi ut enim. Vivamus eget dictum sem, vitae malesuada erat. Duis et placerat diam, bibendum dapibus tellus. Duis quis laoreet felis. Cras lobortis interdum eros, luctus laoreet ex faucibus id. In et lacus egestas, accumsan metus ac, sollicitudin ante. Aenean eleifend orci vel mollis sagittis. Vestibulum sed aliquam diam, at tincidunt nisl. Phasellus porttitor malesuada hendrerit. Curabitur nibh dolor, iaculis aliquet sagittis eget, vestibulum ac dui. Aenean arcu sapien, ultricies sit amet ipsum ut, accumsan consectetur risus. Duis felis diam, laoreet quis ipsum et, efficitur facilisis sapien.
+    text: Este workshop ensina-te a utilizar o Vue.Js, uma framework de JavaScript para construir user interfaces, equiparável a React mas com uma curva de aprendizagem muito inferior e utilizada em websites como laravel.com e gitlab.com . Para além disso, o código resultante é de fácil leitura e a documentação é perfeita! Por isso se queres começar a dominar esta  ferramenta que te ajudará no futuro, participa!
     speaker: <a target="_blank" href="https://github.com/fntneves">Francisco Neves</a>
 
   - title: Hour of Code
     date: 6 de Dezembro
-    time: TBA
+    time: 17h
     place: A2 - Departamento de Informática
     image: activities/hourofcode.png
     org: <a target="_blank" href="http://cesium.di.uminho.pt">CeSIUM</a>
     typeform: http://cesium.di.uminho.pt/activities/17
-    text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet commodo libero. Praesent consectetur, sem id egestas ullamcorper, turpis ligula maximus lorem, non congue quam mi ut enim. Vivamus eget dictum sem, vitae malesuada erat. Duis et placerat diam, bibendum dapibus tellus. Duis quis laoreet felis. Cras lobortis interdum eros, luctus laoreet ex faucibus id. In et lacus egestas, accumsan metus ac, sollicitudin ante. Aenean eleifend orci vel mollis sagittis. Vestibulum sed aliquam diam, at tincidunt nisl. Phasellus porttitor malesuada hendrerit. Curabitur nibh dolor, iaculis aliquet sagittis eget, vestibulum ac dui. Aenean arcu sapien, ultricies sit amet ipsum ut, accumsan consectetur risus. Duis felis diam, laoreet quis ipsum et, efficitur facilisis sapien.
+    text: A Hour of Code é uma hora dedicada a aprender programação, e é aberta a todo o público, não sendo preciso qualquer conhecimento prévio de programação para participar. Assim, oferecemos-te uma palestra introdutória de programação em Javascript, que irá culminar com o desenvolvimento do famosíssimo jogo Flappy Birds! Vem jogar connosco! 
   
   - title: Talk About
     date: 6 de Dezembro
@@ -72,8 +72,8 @@ secondweek:
 
   - title: English Night
     date: 13 de Dezembro
-    time: TBA
-    place: TBA
+    time: 24h
+    place: Universidade do Minho
     image: activities/cesium.png
     org: <a target="_blank" href="http://cesium.di.uminho.pt">CeSIUM</a>
     typeform: https://cesium.typeform.com/to/HKIJg7
@@ -99,12 +99,8 @@ thirdweek:
     speaker: <a target="_blank" href="">Orador 1</a>, <a target="_blank" href="">Orador 2</a>
 
 fourthweek:
-  - title: Título da atividade 8
-    date: 7 de Dezembro
-    time: 17h-19h
-    place: CP2 2.12
+  - title: Dia de Natal
+    date: 25 de Dezembro
     image: infotricks.png
-    typeform: https://cesium.typeform.com/to/xrourN
     text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet commodo libero. Praesent consectetur, sem id egestas ullamcorper, turpis ligula maximus lorem, non congue quam mi ut enim. Vivamus eget dictum sem, vitae malesuada erat. Duis et placerat diam, bibendum dapibus tellus. Duis quis laoreet felis. Cras lobortis interdum eros, luctus laoreet ex faucibus id. In et lacus egestas, accumsan metus ac, sollicitudin ante. Aenean eleifend orci vel mollis sagittis. Vestibulum sed aliquam diam, at tincidunt nisl. Phasellus porttitor malesuada hendrerit. Curabitur nibh dolor, iaculis aliquet sagittis eget, vestibulum ac dui. Aenean arcu sapien, ultricies sit amet ipsum ut, accumsan consectetur risus. Duis felis diam, laoreet quis ipsum et, efficitur facilisis sapien.
-    speaker: <a target="_blank" href="a">Orador 1</a>, <a target="_blank" href="a">Orador 2</a>
 
