--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -101,5 +101,5 @@ thirdweek:
 fourthweek:
   - title: Dia de Natal
     date: 25 de Dezembro
-    logo-image: infotricks.png
+    logo-image: activities/natal.png
     text: <p> O Natal é uma época festiva, em que trocamos presentes com quem nos é mais querido, celebramos com muita comida, bebida e, sobretudo, muito amor e carinho. </p> <p> Mas o Natal também é a época de olharmos para o outro, é a época da solidariedade, da entreajuda, da partilha, o Natal é o momento de fazer um esforço para estender a mão ao próximo. </p> <p> Convidamos-te então a participar numa sessão de introspeção neste dia, em que apesar de separados estaremos todos com o mesmo objetivo em mente, propagar o verdadeiro espírito natalício e melhorar o dia de quem mais precisa! </p>
