changed description section colour

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ colors:
   grey :          '#696969'
   yellow:         '#fef99c'
   intro:          '#70161a'
-  description:    '#891820'
+  description:    '#3e7846'
   contributions:  '#9c1f28'
   firstweek:      '#3e7846'
   secondweek:     '#9c1f28'
