added elsa activity

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -32,6 +32,13 @@ firstweek:
     org: <a target="_blank" href="https://www.facebook.com/neep.uminho/">NEEP</a>
     text: MOLDEX3D é um produto desenvolvido pela Coretech System Co. que incorpora as mais avançadas tecnologias de análise. Com uma interface amigável, permite até a um não especialista realizar estudos e encontrar soluções para potenciais problemas na peça e/ou projeto do molde. O MOLDEX3D dispõe de um conjunto completo de ferramentas de simulação para produtos plásticos injetados com uma tecnologia baseada nas malhas sólidas híbridas e no método de volumes finitos de alto desempenho.
 
+  - title: 'Arbitragem Tributária: uma nova alternativa na resolução de litígios'
+    date: 6 de Dezembro
+    place: Auditório Nobre, Escola de Direito
+    image: activities/direito.jpg
+    org: <a target="_blank" href="https://www.facebook.com/elsauminho/">ELSA</a>
+    text: É essencial dar a conhecer formas alternativas de resolução de litigiosidade tributária, sendo esta uma das áreas do direito que, cada vez mais, se denota como uma referência no panorama nacional e internacional. Considerando a ELSA que esta é uma disciplina essencial para a formação de um jurista, visamos dá-la a conhecer aos alunos de licenciatura. Para além disto, interrelaciona-se com várias áreas do direito, como o direito constitucional e o administrativo. É fundamental investir no conhecimento destas alternativas de resolução de litígios uma vez que o mundo do Direito não é fechado, nem se limita à barra do tribunal.
+
   - title: Hour of Code
     date: 6 de Dezembro
     time: 17h
