--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -7,18 +7,6 @@
   site: http://aiesec.pt//
   full-width: true
 - title:
-  logo-image: NAMecUM.png
-  site: https://www.facebook.com/NAMecUM/
-  full-width: true
-- title:
-  logo-image: NEEGIUM.png
-  site: https://www.facebook.com/NEEGIUM/
-  full-width: true
-- title:
-  logo-image: netium.png
-  site: https://www.facebook.com/netiuminho/
-  full-width: false
-- title:
   logo-image: polimeros.png
   site: https://www.facebook.com/neep.uminho/
   full-width: true
@@ -31,14 +19,14 @@
   site: https://www.facebook.com/nucleoed/
   full-width: false
 - title:
-  logo-image: neebum.png
-  site: https://www.facebook.com/Neebum-121385298045015/
-  full-width: true
-- title:
   logo-image: nemum.png
   site: https://www.facebook.com/NEMUM
   full-width: true
 - title:
   logo-image: neoum.png
   site: https://www.facebook.com/neouminho
+  full-width: true
+- title:
+  logo-image: elsa.png
+  site: https://www.facebook.com/elsauminho/
   full-width: true
