--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,14 +1,18 @@
-- title: CeSIUM
-  logo-image: cesium.png
-  site: http://cesium.di.uminho.pt/
-  full-width: true
+# - title: CeSIUM
+#   logo-image: cesium.png
+#   site: http://cesium.di.uminho.pt/
+#   full-width: true
+# - title:
+#   logo-image: polimeros.png
+#   site: https://www.facebook.com/neep.uminho/
+#   full-width: true
+# - title:
+#   logo-image: elsa.png
+#   site: https://www.facebook.com/elsauminho/
+#   full-width: true
 - title:
-  logo-image: aiesec.png
-  site: http://aiesec.pt//
-  full-width: true
-- title:
-  logo-image: polimeros.png
-  site: https://www.facebook.com/neep.uminho/
+  logo-image: nemum.png
+  site: https://www.facebook.com/NEMUM
   full-width: true
 - title:
   logo-image: ADAEUM.png
@@ -19,14 +23,10 @@
   site: https://www.facebook.com/nucleoed/
   full-width: false
 - title:
-  logo-image: nemum.png
-  site: https://www.facebook.com/NEMUM
-  full-width: true
-- title:
   logo-image: neoum.png
   site: https://www.facebook.com/neouminho
   full-width: true
 - title:
-  logo-image: elsa.png
-  site: https://www.facebook.com/elsauminho/
+  logo-image: aiesec.png
+  site: http://aiesec.pt//
   full-width: true
