--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -6,10 +6,10 @@ contributions:
   - title: Contribuir ao participar nos eventos listados
     logo-image: gift.png
     text: Ainda de modo a criar um espírito de partilha e de solidariedade entre todos durante este mês, todos os Núcleos, Associações e Secções participantes nesta iniciativa irão também cobrar como entrada para participação nas suas atividades ou num grupo de atividades específico bens alimentares, peças de vestuário e brinquedos que irão posteriormente ser colocados nos cabazes para serem entregues às instituições.
-        
+
 firstweek:
   - title: Torneio de FIFA17
-    date: 4 de Dezembro 
+    date: 4 de Dezembro
     place: CeSIUM
     image: activities/fifa.jpg
     org: <a target="_blank" href="http://cesium.di.uminho.pt">CeSIUM</a>
@@ -46,8 +46,8 @@ firstweek:
     image: activities/hourofcode.png
     org: <a target="_blank" href="http://cesium.di.uminho.pt">CeSIUM</a>
     typeform: http://www.cesium.di.uminho.pt/activities/18
-    text: A Hour of Code é uma hora dedicada a aprender programação, e é aberta a todo o público, não sendo preciso qualquer conhecimento prévio de programação para participar. Assim, oferecemos-te uma palestra introdutória de programação em Javascript, que irá culminar com o desenvolvimento do famosíssimo jogo Flappy Birds! Vem jogar connosco! 
-  
+    text: A Hour of Code é uma hora dedicada a aprender programação, e é aberta a todo o público, não sendo preciso qualquer conhecimento prévio de programação para participar. Assim, oferecemos-te uma palestra introdutória de programação em Javascript, que irá culminar com o desenvolvimento do famosíssimo jogo Flappy Birds! Vem jogar connosco!
+
   - title: Talk About
     date: 6 de Dezembro
     time: 16h
@@ -56,7 +56,7 @@ firstweek:
     org: <a target="_blank" href="http://um.ieee-pt.org/">IEEE - UMinho</a>
     typeform: https://goo.gl/forms/cCv4SAmWwmWr6b3s1
     text: TALK ABOUT terá a sua primeira edição com o tema "Blockchain for FinTech and for Industry Applications" , com o objetivo de promover a troca de conhecimentos entre o público e os oradores sobre novas tecnologias disjuntivas.
-    speaker: <a target="_blank" href="https://www.linkedin.com/in/trigomargarida/">Ana Trigo</a> <a target="_blank" href="https://www.linkedin.com/in/joaocunhagalvao/">João Galvão</a> <a target="_blank" href="https://www.linkedin.com/in/emanuel-mota-7371613/">Emanuel Mota</a> 
+    speaker: <a target="_blank" href="https://www.linkedin.com/in/trigomargarida/">Ana Trigo</a> <a target="_blank" href="https://www.linkedin.com/in/joaocunhagalvao/">João Galvão</a> <a target="_blank" href="https://www.linkedin.com/in/emanuel-mota-7371613/">Emanuel Mota</a>
 
 secondweek:
   - title: Jantar de 15º aniversário do NEMUM
@@ -65,7 +65,7 @@ secondweek:
     place: Restaurante Panorâmico da Universidade do Minho - Gualtar
     logo-image: org/nemum.png
     org: <a target="_blank" href="https://www.facebook.com/NEMUM">NEMUM</a>
-    text: O NEMUM celebra o seu 15º aniversário em 2017 e realizará um jantar aberto à comunidade académica para comemorar. Ao espírito de celebração de aniversário, associa-se o espírito natalício e de solidariedade. Os participantes do jantar são convidados a trazer bens alimentares, peças de vestuário e brinquedos e a colocá-los na árvore de Natal que estará no local para o efeito. 
+    text: O NEMUM celebra o seu 15º aniversário em 2017 e realizará um jantar aberto à comunidade académica para comemorar. Ao espírito de celebração de aniversário, associa-se o espírito natalício e de solidariedade. Os participantes do jantar são convidados a trazer bens alimentares, peças de vestuário e brinquedos e a colocá-los na árvore de Natal que estará no local para o efeito.
 
   - title: Workshop Vue.js
     date: 13 de Dezembro
@@ -76,6 +76,16 @@ secondweek:
     typeform: http://www.cesium.di.uminho.pt/activities/11
     text: Este workshop ensina-te a utilizar o Vue.Js, uma framework de JavaScript para construir user interfaces, equiparável a React mas com uma curva de aprendizagem muito inferior e utilizada em websites como laravel.com e gitlab.com . Para além disso, o código resultante é de fácil leitura e a documentação é perfeita! Por isso se queres começar a dominar esta  ferramenta que te ajudará no futuro, participa!
     speaker: <a target="_blank" href="https://github.com/fntneves">Francisco Neves</a>
+
+  - title: Workshop Haskell
+    date: 13 de Dezembro
+    time: 14h
+    place:
+    image: activities/Workshop_Haskell.png
+    org: <a target="_blank" href="http://cesium.di.uminho.pt">NECC</a>
+    typeform: https://docs.google.com/forms/d/e/1FAIpQLSd9-uzQpX3a3Gkay6r3CK1ZXwp6DgzzCOfStgvq2gybmhNJgQ/viewform?c=0&w=1
+    text: Sabes um pouco de Haskell e gostavas de conhecer algumas aplicações práticas desta linguagem de programação? Então este workshop é para ti! Esta atividade é grátis para sócios do NECC e tem o custo de 1€ para não sócios. Sócios e não sócios têm de contribuir com o bem alimentar.
+    speaker: Prof. Alcino Cunha
 
   - title: English Night
     date: 13 de Dezembro
