2018 edition: first version

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -2,27 +2,27 @@
 #   logo-image: cesium.png
 #   site: http://cesium.di.uminho.pt/
 #   full-width: true
-- title:
-  logo-image: nemum.png
-  site: https://www.facebook.com/NEMUM
-- title:
-  logo-image: polimeros.png
-  site: https://www.facebook.com/neep.uminho/
-- title:
-  logo-image: neoum.png
-  site: https://www.facebook.com/neouminho
-- title:
-  logo-image: NEDUM.png
-  site: https://www.facebook.com/nucleoed/
-- title:
-  logo-image: ADAEUM.png
-  site: https://www.facebook.com/debatesuminho/
-- title:
-  logo-image: necc.png
-  site: http://necc.di.uminho.pt/
-- title:
-  logo-image: elsa.png
-  site: https://www.facebook.com/elsauminho/
-- title:
-  logo-image: aiesec.png
-  site: http://aiesec.pt/
+#- title:
+#  logo-image: nemum.png
+#  site: https://www.facebook.com/NEMUM
+#- title:
+#  logo-image: polimeros.png
+#  site: https://www.facebook.com/neep.uminho/
+#- title:
+#  logo-image: neoum.png
+#  site: https://www.facebook.com/neouminho
+#- title:
+#  logo-image: NEDUM.png
+#  site: https://www.facebook.com/nucleoed/
+#- title:
+#  logo-image: ADAEUM.png
+#  site: https://www.facebook.com/debatesuminho/
+#- title:
+#  logo-image: necc.png
+#  site: http://necc.di.uminho.pt/
+#- title:
+#  logo-image: elsa.png
+#  site: https://www.facebook.com/elsauminho/
+#- title:
+#  logo-image: aiesec.png
+#  site: http://aiesec.pt/
