--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -2,27 +2,25 @@
 #   logo-image: cesium.png
 #   site: http://cesium.di.uminho.pt/
 #   full-width: true
+- title:
+  logo-image: necc.png
+  site: http://necc.di.uminho.pt/
+- title:
+  logo-image: neebum.png
+  site: https://www.facebook.com/Neebum-121385298045015/
+- title:
+  logo-image: NEEGIUM.png
+  site: https://www.facebook.com/NEEGIUM/
 #- title:
-#  logo-image: nemum.png
-#  site: https://www.facebook.com/NEMUM
+#  logo-image: aissc.png
+#  site: https://aissc.dsi.uminho.pt/
 #- title:
-#  logo-image: polimeros.png
-#  site: https://www.facebook.com/neep.uminho/
+#  logo-image: deb.png
+#  site: https://www.deb.uminho.pt/
 #- title:
-#  logo-image: neoum.png
-#  site: https://www.facebook.com/neouminho
+#  logo-image: ieee.png
+#  site: http://um.ieee-pt.org/
 #- title:
-#  logo-image: NEDUM.png
-#  site: https://www.facebook.com/nucleoed/
-#- title:
-#  logo-image: ADAEUM.png
-#  site: https://www.facebook.com/debatesuminho/
-#- title:
-#  logo-image: necc.png
-#  site: http://necc.di.uminho.pt/
-#- title:
-#  logo-image: elsa.png
-#  site: https://www.facebook.com/elsauminho/
-#- title:
-#  logo-image: aiesec.png
-#  site: http://aiesec.pt/
+#  logo-image: gaccum.png
+#  site: http://gaccum.weebly.com/
+
