--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -3,38 +3,10 @@
   site: https://www.sas.uminho.pt/
   full-width: false
 - title:
-  logo-image: NAMecUM.png
-  site: https://www.facebook.com/NAMecUM/
-  full-width: true
-- title:
   logo-image: aaum.png
   site: http://www.aaum.pt/
   full-width: true
 - title:
-  logo-image: NEEGIUM.png
-  site: https://www.facebook.com/NEEGIUM/
-  full-width: true
-- title:
-  logo-image: netium.png
-  site: https://www.facebook.com/netiuminho/
-  full-width: false
-- title:
-  logo-image: neebum.png
-  site: https://www.facebook.com/Neebum-121385298045015/
-  full-width: true
-- title:
-  logo-image: aepum.png
-  site: http://www.aepum.pt/
-  full-width: true
-- title:
-  logo-image: naecum.png
-  site: https://www.facebook.com/NAECUM/
-  full-width: true
-- title:
-  logo-image: neaum.png
-  site: #//TODO: adicionar website
-  full-width: true
-- title:
-  logo-image: neeb.png
-  site: http://neebuminho.com/ #//TODO: É mesmo este?
+  logo-image: nemum.png
+  site: https://www.facebook.com/NEMUM
   full-width: true
