added ieee logo

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -7,3 +7,6 @@
 - title:
   logo-image: NEEGIUM.png
   site: https://www.facebook.com/NEEGIUM/
+- title:
+  logo-image: ieee.png
+  site: https://www.facebook.com/IEEEUMinhoSB/
